syntax = "proto3";

package urlService;

service UrlService {
    rpc RegisterUser(RegisterUserDetails) returns (RegisterUserResponse) {}
    rpc ShortenUrl(UrlDetails) returns (ShortenUrlResponse) {}
}

message RegisterUserDetails {
    string name = 1;
    string email = 2;
}

message RegisterUserResponse {
    string email = 1;
    string apiKey = 2;
}

message UrlDetails {
    string url = 1;
    string apiKey = 2;
}

message ShortenUrlResponse {
    string originalUrl = 1;
    string shortenedUrl = 2;
    optional string error = 3;
}
